@@ -4,6 +4,16 @@ Change history
 Release Candidate 3
 ===================
 
+- Applied Markus Zywitza's patch adding a Fold method to TextHelper. 
+  His description "Shortens a text to the specified length (using full words only and
+adding an ellipsis at the end) and wraps it into a span-element that
+has the title-property with the full text associated. This is
+convenient for displaying properties in tables that might have very
+much content (desription fields etc.) without destroying the table's
+layout. Due to the title-property of the surrounding span-element, the
+full text is displayed in the browser while hovering over the
+shortened text."
+
 - Applied Aaron Jensen's patch fixing MR-288
   "ApplicationPhysicalPath returns request path instead of / path"
 
